<resources>
    <string name="app_name">assignment3</string>
    <string name="mvp">MVP</string>
    <string name="mvvm">MVVM</string>
    <string name="enter_number_1">Enter number 1</string>
    <string name="enter_number_2">Enter number 2</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="multiply">Multiply</string>
    <string name="divide">Divide</string>
    <string name="result_hint">Result:</string>
</resources>