<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mvp_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

    <EditText
        android:id="@+id/mvp_input_num_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_number_1"
        android:inputType="numberDecimal|numberSigned"
        android:autofillHints="number" />

    <EditText
        android:id="@+id/mvp_input_num_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_number_2"
        android:inputType="numberDecimal|numberSigned"
        android:autofillHints="number" />

    <TextView
        android:id="@+id/mvp_result_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/result_hint"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"/>

    <Button
        android:id="@+id/button_mvp_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        />

    <Button
        android:id="@+id/button_mvp_subtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtract"
        />

    <Button
        android:id="@+id/button_mvp_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiply"
        />

    <Button
        android:id="@+id/button_mvp_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>